--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -457,7 +457,7 @@ label{
 
 		.action-icon{
 			display: inline-block;
-			margin-bottom: 5px;
+			margin-bottom: $default-margin;
 			width: 24px;  
 		}
 
